yoshimi 1.5.10 rc2

2-18-12-18 Will
* Changed PRNGs to specifically use uint32_t
* Updated most docs for release.
* Set version as 1.5.10 rc2

2018-12-9 Will
* Some minor code cleanups.
* Doc updates.
* Set version as 1.5.10 rc1

2018-12-6 Will
* Fixed GUI regression Resonance Apply button
  inoperable when resonance disabled!
* Added 'Echo Multimod' to Will_Godfrey_Companion.
* Also added 'Cathedral Pipe organ'.

2018-12-5 Will
* Added CLI warning when insEffect is unrouted.
* Fixed CLI regression. Set part program blocked
  if part was not enabled - should auto-enable.

2018-12-3 Will
* BugFix: CLI Solo not accessing twoWay mode.
* Doc updates.

2018-12-2 Will
* BugFix: readAllData() not returning indirect value.
* More details available in CLI list part.

2018-12-1 Will
* CLI List part gives detailed current status.
  It gives further details if in part context.

2018-11-30 Will
* Prng behaviour now confirmed and reseeds removed.
  Quite unnecessary. Needs many hours of continuous
  playing to begin to get anywhere near pattern repeat.

2018-11-29 Will
* Some corrections and improvements to new prng.
* Further refinements to prng.
  In some cases we were converting to float then
  converting back to integer!
* Final tweaks to prng - I think!
* Rationalised some float to int conversions.

2018-11-28 Will
* Inplemented a new prng with no external libraries
  based on "A small noncryptographic PRNG"
  by Bob Jenkins

2018-11-27 Will
* Randomness can now be disabled for test purposes.
  Enabe #define NORANDOM in globals.h
  This makes subSynth and padSynth sound strange :o
* A bit more work on unified presets placeholders.

2018-11-25 Will
* Moved all static CmdInterface strings from .cpp to .h
* Corrected some CLI EQ text.
* Changed CLI internal names to avoid potential clashes.

2018-11-24 Will
* BugFix: Limits tests not finding dynfilter-filter.
* Completed CLI access to dynfilter. Phew!
* Some extra CLI code cleanups.

2018-11-23 Will